name:                reflex-forms
version:             0.1.0.0
synopsis:            Typed form library for reflex
description:         Please see README.md
homepage:            https://github.com/githubuser/reflex-forms#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.Forms
  build-depends:       base >= 4.7 && < 5
                     , reflex-dom
                     , reflex
                     , text
                     , containers
                     , bytestring
                     , vector
                     , time
  default-language:    Haskell2010

test-suite reflex-forms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reflex-forms
                     , reflex-dom
                     , time
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/reflex-forms
